# claude-code-plugins

./: .gitignore  .release-please-manifest.json  CLAUDE.md  README.md  release-please-config.json
.claude-plugin/: marketplace.json  plugin.json
code-review/.claude-plugin/: plugin.json
code-review/agents/: code-quality-reviewer.md  documentation-accuracy-reviewer.md  performance-reviewer.md  review-local-orchestrator.md  security-code-reviewer.md  test-coverage-reviewer.md
code-review/plans/: lucky-giggling-sonnet.md
code-review/skills/review-local/: SKILL.md
code-review/skills/review-pr/: SKILL.md
code-review/skills/review-pr/references/: code-quality.md  documentation.md  performance.md  security.md  test-coverage.md
docs/: plugin-introduction.md
ios-team/: CHANGELOG.md
ios-team/.claude-plugin/: plugin.json
ios-team/agents/: ios-feature-developer.md  ios-screenshot-analyzer.md
ios-team/commands/: implement.md  propose.md  prototype.md
ios-team/skills/design-system/: SKILL.md
ios-team/skills/design-system/references/: design-guidelines.md  (+1 more)
ios-team/skills/localization/: SKILL.md
ios-team/skills/project-architecture/: SKILL.md
ios-team/skills/smoke-test/: SKILL.md
project-manager/.claude-plugin/: plugin.json
project-manager/commands/: infographic.md  visualize.md
project-manager/mcp-servers/nanobanana/: pyproject.toml  server.py
vibestudio/.claude-plugin/: plugin.json
vibestudio/hooks/: hooks.json
vibestudio/scripts/: on_pre_tool_use.sh  on_session_start.sh  on_stop.sh  on_user_prompt.sh  speak_assistant_messages.sh
(+27 files in other folders)
